Updated meta description and protocol relative font url

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -10,7 +10,7 @@
     <title>fyi.org.nz</title>
     <meta name="author" content="ukieweb" />
     <meta name="keywords" content="soon, css3, template, html5 template" />
-    <meta name="description" content="Washer - Page Template" />
+    <meta name="description" content="fyi.org.nz will be back soon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- Font Awesome -->
     <link type="text/css" media="all" href="fonts/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" />
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" />
     <link rel="shortcut icon" href="img/favicons/favicon.png" />
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Exo+2:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Exo+2:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
